--- a/WeddingApp/WeddingApp/WeddingApp.csproj
+++ b/WeddingApp/WeddingApp/WeddingApp.csproj
@@ -167,6 +167,7 @@
     </Compile>
     <Compile Include="CustomMessageBox.cs" />
     <Compile Include="ViewModels\ControlBarVM.cs" />
+    <Compile Include="ViewModels\DashBoardVM.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\AddDishWindow.xaml.cs">
       <DependentUpon>AddDishWindow.xaml</DependentUpon>
@@ -191,6 +192,9 @@
     </Compile>
     <Compile Include="Views\UserControls\Admin\EditDishUC.xaml.cs">
       <DependentUpon>EditDishUC.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\Admin\EditServiceUC.xaml.cs">
+      <DependentUpon>EditServiceUC.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UserControls\Admin\EmployeeListUC.xaml.cs">
       <DependentUpon>EmployeeListUC.xaml</DependentUpon>
@@ -268,6 +272,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\UserControls\Admin\EditDishUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\Admin\EditServiceUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
